[package]
name = "end_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.0", features = ["full"] }
